// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render columns-bottom slot 1`] = `
<DocumentFragment>
  .c0.mul-picker {
  position: relative;
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.mul-picker .mul-picker__toolbar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 44px;
}

.c0.mul-picker .mul-picker__cancel,
.c0.mul-picker .mul-picker__confirm {
  height: 100%;
  padding: 16px;
  font-size: 14px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.c0.mul-picker .mul-picker__cancel .mul-picker:active,
.c0.mul-picker .mul-picker__confirm .mul-picker:active {
  opacity: $active_opacity;
}

.c0.mul-picker .mul-picker__confirm {
  color: #576b95;
}

.c0.mul-picker .mul-picker__cancel {
  color: #969799;
}

.c0.mul-picker .mul-picker__title {
  max-width: 50%;
  font-weight: $font_weight_bold;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
}

.c0.mul-picker .mul-picker__columns {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c0.mul-picker .mul-picker__loading {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #108ee9;
  background-color: rgba(255,255,255,0.9);
}

.c0.mul-picker .mul-picker__frame {
  position: absolute;
  top: 50%;
  right: 16px;
  left: 16px;
  z-index: 3;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.c0.mul-picker .mul-picker__mask {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  height: 100%;
  background-image: linear-gradient( 180deg, hsla(0,0%,100%,0.9), hsla(0,0%,100%,0.4) ), linear-gradient(0deg,hsla(0,0%,100%,0.9),hsla(0,0%,100%,0.4));
  background-repeat: no-repeat;
  background-position: top,bottom;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  pointer-events: none;
}

.c0.mul-picker .mul-picker-column {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  font-size: 16px;
}

.c0.mul-picker .mul-picker-column .mul-picker__wrapper {
  -webkit-transition-timing-function: cubic-bezier(0.23,1,0.68,1);
  transition-timing-function: cubic-bezier(0.23,1,0.68,1);
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 $padding_base;
  color: #000;
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item--disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<div
    class="c0 mul-picker"
  >
    <div
      slot="columns-top"
    >
      columns-top
    </div>
    <div
      slot="columns-top"
    >
      columns-top
    </div>
    <div
      class="mul-picker__columns"
      style="height: 264px;"
    >
      <div
        class="mul-picker-column"
      >
        <ul
          style="transform: translate3d(0, 110px, 0); transition-duration: 200ms; transition-property: all;"
        >
          <div>
            <li
              class="mul-picker-column__item mul-picker-column__item--selected"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1990
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1991
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1992
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1993
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1994
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1995
              </div>
            </li>
          </div>
        </ul>
      </div>
      <div
        class="mul-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="mul-hairline-unset--top-bottom mul-picker__frame"
        style="height: 44px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`render columns-top slot 1`] = `
<DocumentFragment>
  .c0.mul-picker {
  position: relative;
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.mul-picker .mul-picker__toolbar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 44px;
}

.c0.mul-picker .mul-picker__cancel,
.c0.mul-picker .mul-picker__confirm {
  height: 100%;
  padding: 16px;
  font-size: 14px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.c0.mul-picker .mul-picker__cancel .mul-picker:active,
.c0.mul-picker .mul-picker__confirm .mul-picker:active {
  opacity: $active_opacity;
}

.c0.mul-picker .mul-picker__confirm {
  color: #576b95;
}

.c0.mul-picker .mul-picker__cancel {
  color: #969799;
}

.c0.mul-picker .mul-picker__title {
  max-width: 50%;
  font-weight: $font_weight_bold;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
}

.c0.mul-picker .mul-picker__columns {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c0.mul-picker .mul-picker__loading {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #108ee9;
  background-color: rgba(255,255,255,0.9);
}

.c0.mul-picker .mul-picker__frame {
  position: absolute;
  top: 50%;
  right: 16px;
  left: 16px;
  z-index: 3;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.c0.mul-picker .mul-picker__mask {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  height: 100%;
  background-image: linear-gradient( 180deg, hsla(0,0%,100%,0.9), hsla(0,0%,100%,0.4) ), linear-gradient(0deg,hsla(0,0%,100%,0.9),hsla(0,0%,100%,0.4));
  background-repeat: no-repeat;
  background-position: top,bottom;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  pointer-events: none;
}

.c0.mul-picker .mul-picker-column {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  font-size: 16px;
}

.c0.mul-picker .mul-picker-column .mul-picker__wrapper {
  -webkit-transition-timing-function: cubic-bezier(0.23,1,0.68,1);
  transition-timing-function: cubic-bezier(0.23,1,0.68,1);
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 $padding_base;
  color: #000;
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item--disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<div
    class="c0 mul-picker"
  >
    <div
      slot="columns-top"
    >
      columns-top
    </div>
    <div
      slot="columns-top"
    >
      columns-top
    </div>
    <div
      class="mul-picker__columns"
      style="height: 264px;"
    >
      <div
        class="mul-picker-column"
      >
        <ul
          style="transform: translate3d(0, 110px, 0); transition-duration: 200ms; transition-property: all;"
        >
          <div>
            <li
              class="mul-picker-column__item mul-picker-column__item--selected"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1990
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1991
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1992
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1993
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1994
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1995
              </div>
            </li>
          </div>
        </ul>
      </div>
      <div
        class="mul-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="mul-hairline-unset--top-bottom mul-picker__frame"
        style="height: 44px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`render default index 1`] = `
<DocumentFragment>
  .c0.mul-picker {
  position: relative;
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.mul-picker .mul-picker__toolbar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 44px;
}

.c0.mul-picker .mul-picker__cancel,
.c0.mul-picker .mul-picker__confirm {
  height: 100%;
  padding: 16px;
  font-size: 14px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.c0.mul-picker .mul-picker__cancel .mul-picker:active,
.c0.mul-picker .mul-picker__confirm .mul-picker:active {
  opacity: $active_opacity;
}

.c0.mul-picker .mul-picker__confirm {
  color: #576b95;
}

.c0.mul-picker .mul-picker__cancel {
  color: #969799;
}

.c0.mul-picker .mul-picker__title {
  max-width: 50%;
  font-weight: $font_weight_bold;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
}

.c0.mul-picker .mul-picker__columns {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c0.mul-picker .mul-picker__loading {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #108ee9;
  background-color: rgba(255,255,255,0.9);
}

.c0.mul-picker .mul-picker__frame {
  position: absolute;
  top: 50%;
  right: 16px;
  left: 16px;
  z-index: 3;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.c0.mul-picker .mul-picker__mask {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  height: 100%;
  background-image: linear-gradient( 180deg, hsla(0,0%,100%,0.9), hsla(0,0%,100%,0.4) ), linear-gradient(0deg,hsla(0,0%,100%,0.9),hsla(0,0%,100%,0.4));
  background-repeat: no-repeat;
  background-position: top,bottom;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  pointer-events: none;
}

.c0.mul-picker .mul-picker-column {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  font-size: 16px;
}

.c0.mul-picker .mul-picker-column .mul-picker__wrapper {
  -webkit-transition-timing-function: cubic-bezier(0.23,1,0.68,1);
  transition-timing-function: cubic-bezier(0.23,1,0.68,1);
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 $padding_base;
  color: #000;
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item--disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<div
    class="c0 mul-picker"
  >
    <div
      class="mul-picker__toolbar"
    >
      <button
        class="mul-picker__cancel"
        type="button"
      >
        取消
      </button>
      <div
        class="mul-picker__title mul-ellipsis"
      >
        标题
      </div>
      <button
        class="mul-picker__confirm"
        type="button"
      >
        确认
      </button>
    </div>
    <div
      class="mul-picker__columns"
      style="height: 264px;"
    >
      <div
        class="mul-picker-column"
      >
        <ul
          style="transform: translate3d(0, 22px, 0); transition-duration: 200ms; transition-property: all;"
        >
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1990
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1991
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item mul-picker-column__item--selected"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1992
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1993
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1994
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1995
              </div>
            </li>
          </div>
        </ul>
      </div>
      <div
        class="mul-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="mul-hairline-unset--top-bottom mul-picker__frame"
        style="height: 44px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`render default slot 1`] = `
<DocumentFragment>
  .c0.mul-picker {
  position: relative;
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.mul-picker .mul-picker__toolbar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 44px;
}

.c0.mul-picker .mul-picker__cancel,
.c0.mul-picker .mul-picker__confirm {
  height: 100%;
  padding: 16px;
  font-size: 14px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.c0.mul-picker .mul-picker__cancel .mul-picker:active,
.c0.mul-picker .mul-picker__confirm .mul-picker:active {
  opacity: $active_opacity;
}

.c0.mul-picker .mul-picker__confirm {
  color: #576b95;
}

.c0.mul-picker .mul-picker__cancel {
  color: #969799;
}

.c0.mul-picker .mul-picker__title {
  max-width: 50%;
  font-weight: $font_weight_bold;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
}

.c0.mul-picker .mul-picker__columns {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c0.mul-picker .mul-picker__loading {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #108ee9;
  background-color: rgba(255,255,255,0.9);
}

.c0.mul-picker .mul-picker__frame {
  position: absolute;
  top: 50%;
  right: 16px;
  left: 16px;
  z-index: 3;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.c0.mul-picker .mul-picker__mask {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  height: 100%;
  background-image: linear-gradient( 180deg, hsla(0,0%,100%,0.9), hsla(0,0%,100%,0.4) ), linear-gradient(0deg,hsla(0,0%,100%,0.9),hsla(0,0%,100%,0.4));
  background-repeat: no-repeat;
  background-position: top,bottom;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  pointer-events: none;
}

.c0.mul-picker .mul-picker-column {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  font-size: 16px;
}

.c0.mul-picker .mul-picker-column .mul-picker__wrapper {
  -webkit-transition-timing-function: cubic-bezier(0.23,1,0.68,1);
  transition-timing-function: cubic-bezier(0.23,1,0.68,1);
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 $padding_base;
  color: #000;
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item--disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<div
    class="c0 mul-picker"
  >
    <div>
      header
    </div>
    <div
      class="mul-picker__columns"
      style="height: 264px;"
    >
      <div
        class="mul-picker-column"
      >
        <ul
          style="transform: translate3d(0, 110px, 0); transition-duration: 200ms; transition-property: all;"
        >
          <div>
            <li
              class="mul-picker-column__item mul-picker-column__item--selected"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1990
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1991
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1992
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1993
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1994
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1995
              </div>
            </li>
          </div>
        </ul>
      </div>
      <div
        class="mul-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="mul-hairline-unset--top-bottom mul-picker__frame"
        style="height: 44px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`render mul options 1`] = `
<DocumentFragment>
  .c0.mul-picker {
  position: relative;
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.mul-picker .mul-picker__toolbar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 44px;
}

.c0.mul-picker .mul-picker__cancel,
.c0.mul-picker .mul-picker__confirm {
  height: 100%;
  padding: 16px;
  font-size: 14px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.c0.mul-picker .mul-picker__cancel .mul-picker:active,
.c0.mul-picker .mul-picker__confirm .mul-picker:active {
  opacity: $active_opacity;
}

.c0.mul-picker .mul-picker__confirm {
  color: #576b95;
}

.c0.mul-picker .mul-picker__cancel {
  color: #969799;
}

.c0.mul-picker .mul-picker__title {
  max-width: 50%;
  font-weight: $font_weight_bold;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
}

.c0.mul-picker .mul-picker__columns {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c0.mul-picker .mul-picker__loading {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #108ee9;
  background-color: rgba(255,255,255,0.9);
}

.c0.mul-picker .mul-picker__frame {
  position: absolute;
  top: 50%;
  right: 16px;
  left: 16px;
  z-index: 3;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.c0.mul-picker .mul-picker__mask {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  height: 100%;
  background-image: linear-gradient( 180deg, hsla(0,0%,100%,0.9), hsla(0,0%,100%,0.4) ), linear-gradient(0deg,hsla(0,0%,100%,0.9),hsla(0,0%,100%,0.4));
  background-repeat: no-repeat;
  background-position: top,bottom;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  pointer-events: none;
}

.c0.mul-picker .mul-picker-column {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  font-size: 16px;
}

.c0.mul-picker .mul-picker-column .mul-picker__wrapper {
  -webkit-transition-timing-function: cubic-bezier(0.23,1,0.68,1);
  transition-timing-function: cubic-bezier(0.23,1,0.68,1);
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 $padding_base;
  color: #000;
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item--disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<div
    class="c0 mul-picker"
  >
    <div
      class="mul-picker__toolbar"
    >
      <button
        class="mul-picker__cancel"
        type="button"
      >
        取消
      </button>
      <div
        class="mul-picker__title mul-ellipsis"
      >
        标题
      </div>
      <button
        class="mul-picker__confirm"
        type="button"
      >
        确认
      </button>
    </div>
    <div
      class="mul-picker__columns"
      style="height: 264px;"
    >
      <div
        class="mul-picker-column"
      >
        <ul
          style="transform: translate3d(0, 22px, 0); transition-duration: 200ms; transition-property: all;"
        >
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1990
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1991
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item mul-picker-column__item--selected"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1992
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1993
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1994
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1995
              </div>
            </li>
          </div>
        </ul>
      </div>
      <div
        class="mul-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="mul-hairline-unset--top-bottom mul-picker__frame"
        style="height: 44px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`render title slot 1`] = `
<DocumentFragment>
  .c0.mul-picker {
  position: relative;
  background-color: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.mul-picker .mul-picker__toolbar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 44px;
}

.c0.mul-picker .mul-picker__cancel,
.c0.mul-picker .mul-picker__confirm {
  height: 100%;
  padding: 16px;
  font-size: 14px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.c0.mul-picker .mul-picker__cancel .mul-picker:active,
.c0.mul-picker .mul-picker__confirm .mul-picker:active {
  opacity: $active_opacity;
}

.c0.mul-picker .mul-picker__confirm {
  color: #576b95;
}

.c0.mul-picker .mul-picker__cancel {
  color: #969799;
}

.c0.mul-picker .mul-picker__title {
  max-width: 50%;
  font-weight: $font_weight_bold;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
}

.c0.mul-picker .mul-picker__columns {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c0.mul-picker .mul-picker__loading {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #108ee9;
  background-color: rgba(255,255,255,0.9);
}

.c0.mul-picker .mul-picker__frame {
  position: absolute;
  top: 50%;
  right: 16px;
  left: 16px;
  z-index: 3;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.c0.mul-picker .mul-picker__mask {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  height: 100%;
  background-image: linear-gradient( 180deg, hsla(0,0%,100%,0.9), hsla(0,0%,100%,0.4) ), linear-gradient(0deg,hsla(0,0%,100%,0.9),hsla(0,0%,100%,0.4));
  background-repeat: no-repeat;
  background-position: top,bottom;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  pointer-events: none;
}

.c0.mul-picker .mul-picker-column {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  font-size: 16px;
}

.c0.mul-picker .mul-picker-column .mul-picker__wrapper {
  -webkit-transition-timing-function: cubic-bezier(0.23,1,0.68,1);
  transition-timing-function: cubic-bezier(0.23,1,0.68,1);
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 $padding_base;
  color: #000;
}

.c0.mul-picker .mul-picker-column .mul-picker-column__item--disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<div
    class="c0 mul-picker"
  >
    <div
      slot="title"
    >
      title
    </div>
    <div
      class="mul-picker__columns"
      style="height: 264px;"
    >
      <div
        class="mul-picker-column"
      >
        <ul
          style="transform: translate3d(0, 110px, 0); transition-duration: 200ms; transition-property: all;"
        >
          <div>
            <li
              class="mul-picker-column__item mul-picker-column__item--selected"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1990
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1991
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1992
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1993
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1994
              </div>
            </li>
          </div>
          <div>
            <li
              class="mul-picker-column__item"
              role="button"
              style="height: 44px;"
              tabindex="0"
            >
              <div
                class="mul-ellipsis"
              >
                1995
              </div>
            </li>
          </div>
        </ul>
      </div>
      <div
        class="mul-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="mul-hairline-unset--top-bottom mul-picker__frame"
        style="height: 44px;"
      />
    </div>
  </div>
</DocumentFragment>
`;
